[project]
name = "ml_utils"
requires = ["python>=3.10"]
version = "0.1.0"
authors = [
    {name = "George Ogden"},
]
description = "machine learning utils"
dependencies = [
    "numpy>=1.20",
    "simple-parsing>=0.1.1",
]

[project.optional-dependencies]
test = [
    "pytest>=6.2",
    "pytest-timeout>=1.5",
]